<resources>
    <string name="app_name">OnlineQuizApp</string>
    <string name="btn_sign_in">SignIn</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
